2003-03-28  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-sasl-gssapi.c (gssapi_challenge): If we are using the
	heimdal krb5 implementation, don't free outbuf ever. Seems to
	segfault if we do.

2003-03-27  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-sasl-gssapi.c (gssapi_challenge): Get rid of debug
	printf's that are no longer needed. In the case of errors, don't
	release the outbuf gss_buffer_t since it shouldn't be set. Also
	g_free (str) when we are done with it.

2003-03-26  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-sasl-gssapi.c (camel_sasl_gssapi_finalize): Pass in the
	address of the second args to the delete/release functions. Also
	#define gss_nt_service_name when using heimdal.

2003-03-25  Rodney Dawes  <dobey@ximian.com>

	* camel-sasl-gssapi.c: #include <gssapi.h> for heimdal, fixed CFLAGS
	
2003-03-24  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-sasl-gssapi.c: We don't want to #include <et/com_err.h",
	we want to #include <com_err.h> instead.
	#include <heimdal/gssapi.h> in the heimdal case.

2003-03-20  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-sasl.c: Plug in GSSAPI support.

	* camel-sasl-gssapi.[c,h]: New source files implementing GSSAPI.

2003-03-13  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-mime-part.c (process_header): Use
	header_contentid_decode() as this new function should be safer
	than the hack that we had before.

	* camel-mime-utils.c (header_contentid_decode): New function to
	try and parse a content-id string in such a way as to work around
	some of the known bugs in other MIME implementations. Try to be as
	"safe" as we can - ie. don't allow for more than 1 @ (since the
	mailer uses "@@@%d" as a fake content-id value for parts without
	content-ids) and don't allow for invalid content-type chars.

2003-03-05  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/sendmail/camel-sendmail-transport.c
	(sendmail_send_to): Add a CRLF filter to the output stream to
	convert any CRLF sequences into plain old line-feeds to work