@@ -1,3 +1,10 @@
+2003-06-26  Jeffrey Stedfast  <fejj@ximian.com>
+
+	Backport of Larry's original patch against 1.4
+
+	* camel-folder-thread.c (camel_folder_thread_messages_apply):
+	don't leak the summary chunks when reloading it.
+
 2003-03-28  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* camel-sasl-gssapi.c (gssapi_challenge): If we are using the
